--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       # Step 2: Set up Node.js environment
       - name: Set up Node.js
