--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.59.20",
-    "@tanstack/react-router": "^1.81.5",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "sass": "^1.80.7"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
@@ -34,8 +31,6 @@
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
     "@storybook/test": "^8.4.7",
-    "@tanstack/router-devtools": "^1.81.5",
-    "@tanstack/router-plugin": "^1.79.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
@@ -58,6 +53,7 @@
     "lint-staged": "^15.2.11",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
+    "sass": "^1.82.0",
     "storybook": "^8.4.7",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
